--- a/django_project/blog/templates/blog/home.html
+++ b/django_project/blog/templates/blog/home.html
@@ -2,6 +2,7 @@
 {% block content %}
     {% for post in posts %}
         <article class="media content-section">
+            <img src="{{ post.author.profile.image.url }}" alt="profile_pic" class="rounded-circle article-img">
             <div class="media-body">
             <div class="article-metadata">
                 <a class="mr-2" href="#">{{ post.author }}</a>
