--- a/django_project/users/templates/users/login.html
+++ b/django_project/users/templates/users/login.html
@@ -10,6 +10,8 @@
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Login</button>
+                <small class="test-muted ml-2"></small>
+                    <a href="{% url 'password_reset' %}">Forgot Password?</a>
             </div>
         </form>
         <div class="border-top pt-3">
